placed a body margin-bottom to avoid elements to be hidden by the footer

--- a/src/popup/scss/base.scss
+++ b/src/popup/scss/base.scss
@@ -1,6 +1,7 @@
 body {
   width: 375px !important;
   height: 600px !important;
+  margin-bottom: 65px;
 
   background: $medium-gray;
 
